- FIX: support cursors on IE

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -54,6 +54,7 @@
 	/* autoprefixer: off */
 	cursor: -webkit-zoom-in;
 	cursor: -moz-zoom-in;
+    cursor: url(/img/zoom-in.cur), default;
 	cursor: zoom-in;
 }
 
@@ -61,6 +62,7 @@
 	/* autoprefixer: off */
 	cursor: -webkit-grab;
 	cursor: -moz-grab;
+    cursor: url(/img/grab.cur), default;
 	cursor: grab;
 }
 
@@ -68,6 +70,7 @@
 	/* autoprefixer: off */
 	cursor: -webkit-grabbing;
 	cursor: -moz-grabbing;
+    cursor: url(/img/grabbing.cur), default;
 	cursor: grabbing;
 }
 
